--- a/michelle_source.html
+++ b/michelle_source.html
@@ -193,7 +193,7 @@
                     resolution: window.devicePixelRatio || 1
                 });
 
-                const modelPath = 'source/michelle_source/simple.model3.json';
+                const modelPath = 'source/michelle_source/pachirisu anime girl - top half.model3.json';
 
                 try {
                     model = await PIXI.live2d.Live2DModel.from(modelPath);
