--- a/michelle_source.html
+++ b/michelle_source.html
@@ -157,13 +157,13 @@
     </div>
     <div id="chat-container">
         <div id="status">
-            <span id="thinking-msg" style="display: none; color: #007bff; font-weight: bold;">Michelle is thinking...
-                💭</span>
             <span style="color: #007bff; font-weight: bold;">Model By</span>
-            <span style="color: #007bff; font-weight: bold;">Art: https://twitter.com/koahri1</span>
-            <span style="color: #007bff; font-weight: bold;">Live2D: https://twitter.com/MedL2D</span>
-            
+            <span style="color: #007bff; font-weight: bold;">Art:koahri1</span>
+            <span style="color: #007bff; font-weight: bold;">Live2D:MedL2D</span>
 
+
+            <span id="thinking-msg" style="display: none; color: #007bff; font-weight: bold;">Michelle is
+                thinking...💭</span>
             <div id="progress-container"
                 style="display: none; width: 100%; background: #eee; border-radius: 10px; margin-top: 5px; height: 10px; overflow: hidden;">
                 <div id="progress-bar" style="width: 0%; height: 100%; background: #28a745; transition: width 0.3s;">
@@ -227,6 +227,28 @@
                     app.renderer.on('resize', fitModel);
 
                     model.autoInteract = false; // Disable full head tracking
+                    window.addEventListener('mousemove', (e) => {
+                        if (!model?.internalModel?.coreModel) return;
+
+                        const rect = canvas.getBoundingClientRect();
+                        const x = (e.clientX - rect.left) / rect.width;
+                        const y = (e.clientY - rect.top) / rect.height;
+
+                        // Convert mouse position to Live2D range (-1 to 1)
+                        const mouseX = (x - 0.5) * 2;
+                        const mouseY = (0.5 - y) * 2;
+
+                        // We ONLY apply these to the eyeballs
+                        model.internalModel.coreModel.setParameterValueById('ParamEyeBallX', mouseX);
+                        model.internalModel.coreModel.setParameterValueById('ParamEyeBallY', mouseY);
+
+                        // Explicitly tell the internal Focus system to do nothing 
+                        // This prevents the library from "guessing" the head movement
+                        if (model.internalModel.focusController) {
+                            model.internalModel.focusController.focusX = 0;
+                            model.internalModel.focusController.focusY = 0;
+                        }
+                    });
                 } catch (err) {
                     console.error("Live2D load failed:", err);
                     document.getElementById('model-error').style.display = 'block';
@@ -632,30 +654,27 @@
 
                 const coreModel = model.internalModel.coreModel;
 
-                // --- FORCE HEAD/BODY TO CENTER ---
+                // --- FORCE HEAD & BODY TO STAY CENTERED ---
                 coreModel.setParameterValueById('ParamAngleX', 0);
                 coreModel.setParameterValueById('ParamAngleY', 0);
                 coreModel.setParameterValueById('ParamAngleZ', 0);
                 coreModel.setParameterValueById('ParamBodyAngleX', 0);
+                coreModel.setParameterValueById('ParamBodyAngleY', 0);
+                coreModel.setParameterValueById('ParamBodyAngleZ', 0);
 
-                // 1. Breathing Logic
-                // Uses a sine wave to oscillate ParamBreath between 0 and 1
-                // (currentTime / 1000) converts ms to seconds; 0.5 controls the speed
+                // --- BREATHING ---
                 let breathValue = (Math.sin(currentTime / 1000 * 0.5) + 1) / 2;
                 coreModel.setParameterValueById('ParamBreath', breathValue);
 
-                // 2. Blinking Logic
+                // --- BLINKING ---
                 const elapsed = currentTime - lastBlinkTime;
                 if (elapsed > nextBlinkInterval) {
                     let blinkProgress = (elapsed - nextBlinkInterval) / blinkDuration;
-
                     if (blinkProgress <= 1) {
-                        // Smoothly close and open eyes
                         let eyeValue = 0.5 + 0.5 * Math.cos(blinkProgress * Math.PI * 2);
                         coreModel.setParameterValueById('ParamEyeLOpen', eyeValue);
                         coreModel.setParameterValueById('ParamEyeROpen', eyeValue);
                     } else {
-                        // Reset and randomize next blink
                         coreModel.setParameterValueById('ParamEyeLOpen', 1.0);
                         coreModel.setParameterValueById('ParamEyeROpen', 1.0);
                         lastBlinkTime = currentTime;
@@ -668,24 +687,6 @@
 
             // Start the loop
             requestAnimationFrame(updateIdleAnimations);
-            // Add a manual mouse listener
-            window.addEventListener('mousemove', (e) => {
-                if (!model?.internalModel?.coreModel) return;
-
-                // Get mouse position relative to the canvas
-                const rect = canvas.getBoundingClientRect();
-                const x = (e.clientX - rect.left) / rect.width; // 0 to 1
-                const y = (e.clientY - rect.top) / rect.height; // 0 to 1
-
-                // Convert to Live2D range (-1.0 to 1.0)
-                // Note: y is inverted because in Live2D +1 is up
-                const mouseX = (x - 0.5) * 2;
-                const mouseY = (0.5 - y) * 2;
-
-                // Apply only to Eyeballs
-                model.internalModel.coreModel.setParameterValueById('ParamEyeBallX', mouseX);
-                model.internalModel.coreModel.setParameterValueById('ParamEyeBallY', mouseY);
-            });
         </script>
 </body>
 
