--- a/michelle_source.html
+++ b/michelle_source.html
@@ -201,7 +201,9 @@
                 const modelPath = 'source/michelle_source/pachirisu anime girl - top half.model3.json';
 
                 try {
-                    model = await PIXI.live2d.Live2DModel.from(modelPath);
+                    model = await PIXI.live2d.Live2DModel.from(modelPath, {
+                        autoInteract: false
+                    });
                     app.stage.addChild(model);
 
                     // This function handles the scaling so it doesn't crop
@@ -226,22 +228,21 @@
                     // Call every time the window resizes
                     app.renderer.on('resize', fitModel);
 
-                    model.autoInteract = false; // Disable full head tracking
                     //window.addEventListener('mousemove', (e) => {
                     //    if (!model?.internalModel?.coreModel) return;
-//
+                    //
                     //    const rect = canvas.getBoundingClientRect();
                     //    const x = (e.clientX - rect.left) / rect.width;
                     //    const y = (e.clientY - rect.top) / rect.height;
-//
+                    //
                     //    // Convert mouse position to Live2D range (-1 to 1)
                     //    const mouseX = (x - 0.5) * 2;
                     //    const mouseY = (0.5 - y) * 2;
-//
+                    //
                     //    // We ONLY apply these to the eyeballs
                     //    model.internalModel.coreModel.setParameterValueById('ParamEyeBallX', mouseX);
                     //    model.internalModel.coreModel.setParameterValueById('ParamEyeBallY', mouseY);
-//
+                    //
                     //    // Explicitly tell the internal Focus system to do nothing 
                     //    // This prevents the library from "guessing" the head movement
                     //    if (model.internalModel.focusController) {
